# tower-livereload

./: .envrc  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  README.tpl  shell.nix
.github/workflows/: build.yml  clippy.yml  fmt.yml  playwright.yml
assets/: polling.html  polling.js  sse_reload.js
examples/axum-dev-only/: Cargo.toml
examples/axum-dev-only/src/: main.rs
examples/axum-file-watch/: Cargo.toml
examples/axum-file-watch/assets/: index.html
examples/axum-file-watch/src/: main.rs
examples/axum-htmx/: Cargo.toml
examples/axum-htmx/assets/: index.html  post1.html  post2.html
examples/axum-htmx/src/: main.rs
examples/axum-in-process/: Cargo.toml
examples/axum-in-process/assets/: index.html
examples/axum-in-process/src/: main.rs
examples/axum-simple/: Cargo.toml
examples/axum-simple/src/: main.rs
examples/livehttpd/: Cargo.toml  README.md
examples/livehttpd/src/: main.rs
examples/playwright/: Cargo.toml  package-lock.json  package.json  playwright.config.ts
examples/playwright/src/: main.rs
examples/playwright/tests/: simple.spec.ts
src/: inject.rs  lib.rs  long_poll.rs  overlay.rs  predicate.rs  ready_polyfill.rs  sse.rs
