[package]
name = "axum-file-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
notify = "7.0.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-livereload = { path = "../.." }
