[package]
name = "axum-in-process"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
notify = "6.0.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync", "rt"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["fs"] }
tower-livereload = { path = "../.." }
