[package]
name = "axum-in-process"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
notify = "6.1.1"
tower = "0.4.13"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tower-livereload = { path = "../.." }
