[package]
authors = ["Leo Gaskin <leo.gaskin@le0.gs>"]
categories = ["development-tools", "web-programming::http-server"]
description = "A development server with live-reload capabilities."
edition = "2021"
homepage = "https://github.com/leotaku/tower-livereload/tree/master/examples/livehttpd"
keywords = ["front-end", "development", "tool", "server", "http"]
license = "MIT OR Apache-2.0"
name = "livehttpd"
readme = "README.md"
repository = "https://github.com/leotaku/tower-livereload"
version = "1.0.10"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.17", features = ["derive"] }
notify = "6.1.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["fs", "set-header"] }
tower-livereload = { version = "0.9.4", path = "../.." }
tracing-subscriber = "0.3.18"
