[package]
authors = ["Leo Gaskin <leo.gaskin@le0.gs>"]
categories = ["development-tools", "web-programming::http-server"]
description = "A development server with live-reload capabilities."
edition = "2021"
homepage = "https://github.com/leotaku/tower-livereload/tree/master/examples/livehttpd"
keywords = ["front-end", "development", "tool", "server", "http"]
license = "MIT OR Apache-2.0"
name = "livehttpd"
readme = "README.md"
repository = "https://github.com/leotaku/tower-livereload"
version = "1.0.14-wip"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.30", features = ["derive"] }
notify = "8.0.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }
tower-livereload = { version = "0.9.7-wip", path = "../.." }
tracing-subscriber = "0.3.19"
